Fix nullish user on empty auth token
