# apps/backend/src/controllers/users/deleteSelf.ts
@@ -15,7 +15,7 @@ import { internalError } from "../../shared/errors/internalError.js";
  * @param res - The Express response object.
  */
 const deleteSelf: Handler<"delete", "/users/@me"> = async (req, res) => {
-    if (req.user === null) return rejectWithError(res, notAuthenticated());
+    if (!req.user) return rejectWithError(res, notAuthenticated());
 
     // Get the user
     const user = await getUserWithId(req.user.id).catch(() => null); 
