# apps/backend/src/controllers/users/getSelf.ts
@@ -13,7 +13,7 @@ import { transformUser } from "../../transformers/user.js";
  * @param res - The Express response object.
  */
 const getSelf: Handler<"get", "/users/@me"> = async (req, res) => {
-    if (req.user === null) return rejectWithError(res, notAuthenticated());
+    if (!req.user) return rejectWithError(res, notAuthenticated());
 
     // Get the user
     const user = await getUserWithId(req.user.id).catch(() => {
